Quick fix footer, aligning dog with hr

--- a/app/assets/stylesheets/components/_sausage-dog-animation.scss
+++ b/app/assets/stylesheets/components/_sausage-dog-animation.scss
@@ -1,8 +1,7 @@
 
 .sausage-dog-animation {
-  max-height: 185px;
+  max-height: 130px;
   max-width: 250px;
-  margin-top:-50px;
 }
 
 .ear,
